WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259570
Womo Adventure Map Full Screen View is not loading properly
https://bugs.webkit.org/show_bug.cgi?id=259570
Summary
Womo Adventure Map Full Screen View is not loading properly
alan
Reported
2023-07-27 11:40:46 PDT
<
rdar://112733052
>
Attachments
Patch
(6.15 KB, patch)
2023-07-27 12:02 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.15 KB, patch)
2023-07-27 12:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-07-27 12:02:13 PDT
Created
attachment 467133
[details]
Patch
Simon Fraser (smfr)
Comment 2
2023-07-27 12:04:58 PDT
Comment on
attachment 467133
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=467133&action=review
> LayoutTests/fast/dynamic/float-containing-block-becomes-out-of-flow.html:4 > + font-family: Monospace;
should be "monospace".
alan
Comment 3
2023-07-27 12:52:39 PDT
Created
attachment 467135
[details]
[fast-cq]Patch
EWS
Comment 4
2023-07-27 14:12:05 PDT
Committed
266366@main
(83503754658c): <
https://commits.webkit.org/266366@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467135
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug