Womo Adventure Map Full Screen View is not loading properly https://bugs.webkit.org/show_bug.cgi?id=259570 <rdar://112733052>

Reviewed by Simon Fraser.

Let's just invalidate the floats as intended (and not floats _and_ out-of-flow positioned boxes).

1. out-of-flow box is incorrectly removed from the descendent map on the containing block (in clearDescendantFloats)
2. mutation on the out-of-flow box marks the containing block dirty with "simplified layout is needed"
3. simplified layout is triggered -> out-of-flow box is missing from the map (simplified layout is not supposed to re-populate this map).
-> out-of-flow box stays dirty

* LayoutTests/fast/dynamic/float-containing-block-becomes-out-of-flow-expected.html: Added.
* LayoutTests/fast/dynamic/float-containing-block-becomes-out-of-flow.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::removeFloatingAndInvalidateForLayout):
(WebCore::RenderBox::removeFloatingOrPositionedChildFromBlockLists):
* Source/WebCore/rendering/RenderBox.h:
* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::normalizeTreeAfterStyleChange):

Canonical link: https://commits.webkit.org/266366@main